--- a/index.html
+++ b/index.html
@@ -673,6 +673,23 @@
             </div>
           </div>
 
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/c7.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Thailand Cyber Top Talent 2023</h4>
+                <p></p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/c7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Thailand Cyber Top Talent 2023"><i
+                      class="fa fa-plus"></i></a>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-activities">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/a2.jpg" class="img-fluid" alt="">
