--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
             class="fa-brands fa-github fa-beat"></i></a>
         <a href="#" class="linkedin"><i class="fa-brands fa-linkedin fa-beat"></i></a>
       </div>
+
+         
+    <a href="Piya Miang-Lae Resume.pdf" class="btn btn-outline-primary mt-3" download>
+       <i class="fa-solid fa-download fa-beat"></i>
+          Download Resume
+    </a>
     </div>
   </section><!-- End Hero -->
 
