--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-gallery">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/g1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Gallery</h4>
@@ -451,7 +451,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-activities">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/a1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activities</h4>
@@ -466,7 +466,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-gallery">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/g3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Gallery</h4>
@@ -481,7 +481,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/c1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>ทักษะการเขียนโปรแกรมคอมพิวเตอร์ ระดับ ปวช. การแข่งขันทักษะวิชาชีพ </h4>
@@ -497,7 +497,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/c2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>หลักสูตรด้านความมั่นคงปลอดภัยไซเบอร์ระดับพื้นฐาน</h4>
@@ -512,7 +512,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-gallery">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/g4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Gallery</h4>
@@ -527,7 +527,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/c3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>GLOBAL IT CHALLENGE FOR YOUTH WITH DISABILITIES</h4>
@@ -542,7 +542,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/c4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>WEB APPLICATION DEVELOPMENT</h4>
@@ -557,7 +557,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-activities">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/a5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activities</h4>
@@ -572,7 +572,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-gallery">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/g5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Gallery</h4>
@@ -587,7 +587,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/c5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>PYTHON PROGRAMMING</h4>
@@ -604,7 +604,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-gallery">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/g7.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Gallery</h4>
@@ -619,7 +619,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-activities">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/a6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activities</h4>
@@ -634,7 +634,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/c6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>โครงการแนะแนวการศึกษาเพื่อพัฒนาอาชีพด้านความมั่นคงปลอดภัยไซเบอร์</h4>
@@ -650,7 +650,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-activities">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/a8.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activities</h4>
@@ -665,7 +665,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-gallery">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/g8.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Gallery</h4>
@@ -681,7 +681,7 @@
 
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/c7.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Thailand Cyber Top Talent 2023</h4>
@@ -697,7 +697,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-activities">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/a2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activities</h4>
@@ -712,7 +712,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-gallery">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/g9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Gallery</h4>
@@ -727,7 +727,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-activities">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/a8.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activities</h4>
@@ -742,7 +742,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-gallery">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/g6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Gallery</h4>
@@ -758,7 +758,7 @@
 
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-activities">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/a3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activities</h4>
@@ -915,19 +915,19 @@
           <div class="col-lg-4">
             <div class="info">
               <div class="address">
-                <i class="bi bi-geo-alt"></i>
+                <i class="fas fa-map-marker-alt fa-beat"></i>
                 <h4>Location:</h4>
                 <p>280/7 Sridonmul, Chiang Saen District, Chiang Rai Province, Thailand.</p>
               </div>
 
               <div class="email">
-                <i class="bi bi-envelope"></i>
+                <i class="fas fa-envelope fa-beat"></i>
                 <h4>Email:</h4>
                 <p>piyaboy0974@gmail</p>
               </div>
 
               <div class="phone">
-                <i class="bi bi-phone"></i>
+                <i class="fas fa-phone fa-beat"></i>
                 <h4>Call:</h4>
                 <p>+66 97 959 81177</p>
               </div>
