--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
         <a href="#" class="linkedin"><i class="fa-brands fa-linkedin fa-beat"></i></a>
       </div>
 
-         
-    <a href="Piya Miang-Lae Resume.pdf" class="btn btn-outline-primary mt-3" download>
-       <i class="fa-solid fa-download fa-beat"></i>
-          Download Resume
-    </a>
+
+      <a href="Piya Miang-Lae Resume.pdf" class="btn btn-outline-primary mt-3" download>
+        <i class="fa-solid fa-download fa-beat"></i>
+        Download Resume
+      </a>
     </div>
   </section><!-- End Hero -->
 
@@ -109,28 +109,71 @@
               I'm a Full Stack Web Developer with specialized skills in both back-end and front-end development.
             </p>
             <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right fa-beat"></i> <strong>Birthday:</strong> <span>23 October
-                      2000</span></li>
-                  <li><i class="bi bi-chevron-right fa-beat"></i> <strong>GitHub:</strong>
-                    <span>https://github.com/Piya-Boy/Piya-Boy</span>
-                  </li>
-                  <li><i class="bi bi-chevron-right fa-beat"></i> <strong>Phone:</strong> <span>+66 97 959 8177</span>
-                  </li>
-                  <li><i class="bi bi-chevron-right fa-beat"></i> <strong>City:</strong> <span>Chiang Rai,
-                      Thailand.</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right fa-beat"></i> <strong>Age:</strong> <span>24</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Disability:</strong> <span>Movement
-                      disabilities.</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>piyaboy097@gmail.com</span>
-                  </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
+              <div class="card bg-dark rounded-3">
+                <div class="card-header py-2">
+                  <a class="dot" href="#"></a>
+                  <a class="dot" href="#"></a>
+                  <a class="dot" href="#"></a>
+                </div>
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <div class="cli-control ">
+                        <span class="text-left d-flex align-items-center">$:\Piya-Boy.github.io> <p
+                            class="text-warning ms-2">About Me</p></span>
+                      </div>
+                      <ul class="mt-3">
+                        <li><i class="bi bi-chevron-right fa-beat"></i> <strong>Birthday:</strong>
+                          <span>23 October
+                            2000</span>
+                        </li>
+                        <li><i class="bi bi-chevron-right fa-beat"></i> <strong>GitHub:</strong>
+                          <span>https://github.com/Piya-Boy/Piya-Boy</span>
+                        </li>
+                        <li><i class="bi bi-chevron-right fa-beat"></i> <strong>Phone:</strong>
+                          <span>+66 97 959 8177</span>
+                        </li>
+                        <li><i class="bi bi-chevron-right fa-beat"></i> <strong>City:</strong>
+                          <span>Chiang Rai,
+                            Thailand.</span>
+                        </li>
+                      </ul>
+
+                      <div class="cli-control mt-3">
+                        <span class="text-left d-flex align-items-center">$:\Piya-Boy.github.io> </span>
+                      </div>
+
+                    </div>
+
+                    <div class="col-lg-6">
+                      <div class="cli-control">
+                        <span class="text-left d-flex align-items-center">$:\Piya-Boy.github.io> <p
+                            class="text-warning ms-2">About Me</p></span>
+                      </div>
+
+                      <ul class="mt-3">
+                        <li><i class="bi bi-chevron-right fa-beat"></i> <strong>Age:</strong>
+                          <span>24</span>
+                        </li>
+                        <li><i class="bi bi-chevron-right"></i> <strong>Disability:</strong>
+                          <span>Movement
+                            disabilities.</span>
+                        </li>
+                        <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong>
+                          <span>piyaboy097@gmail.com</span>
+                        </li>
+                        <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong>
+                          <span>Available</span>
+                        </li>
+                      </ul>
+
+                      <div class="cli-control mt-3">
+                        <span class="text-left d-flex align-items-center">$:\Piya-Boy.github.io> </span>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -679,7 +722,7 @@
             </div>
           </div>
 
-          
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
             <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/c7.jpg" class="img-fluid" alt="">
@@ -688,8 +731,7 @@
                 <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/c7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Thailand Cyber Top Talent 2023"><i
-                      class="fa fa-plus"></i></a>
+                    title="Thailand Cyber Top Talent 2023"><i class="fa fa-plus"></i></a>
 
                 </div>
               </div>
@@ -978,15 +1020,15 @@
         I'm a Full Stack Web Developer with specialized skills in both back-end and front-end development.
       </p>
       <div class="social-links">
-     <div class="social-links">
-        <a href="https://www.facebook.com/piya.boyman" target="_blank" class="facebook"><i
-            class="fa-brands fa-facebook fa-beat"></i></a>
-        <a href="https://www.instagram.com/mr_piya_miang_lae/" target="_blank" class="instagram"><i
-            class="fa-brands fa-instagram fa-beat"></i></a>
-        <a href="https://github.com/Piya-Boy/Piya-Boy" target="_blank" class="github"><i
-            class="fa-brands fa-github fa-beat"></i></a>
-        <a href="#" class="linkedin"><i class="fa-brands fa-linkedin fa-beat"></i></a>
-      </div>
+        <div class="social-links">
+          <a href="https://www.facebook.com/piya.boyman" target="_blank" class="facebook"><i
+              class="fa-brands fa-facebook fa-beat"></i></a>
+          <a href="https://www.instagram.com/mr_piya_miang_lae/" target="_blank" class="instagram"><i
+              class="fa-brands fa-instagram fa-beat"></i></a>
+          <a href="https://github.com/Piya-Boy/Piya-Boy" target="_blank" class="github"><i
+              class="fa-brands fa-github fa-beat"></i></a>
+          <a href="#" class="linkedin"><i class="fa-brands fa-linkedin fa-beat"></i></a>
+        </div>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Mr.Piya Miang-Lae</span></strong>. All Rights Reserved
