--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <span>Services</span></a></li> -->
         <li><a href="#contact" class="nav-link scrollto"><i class="fas fa-envelope fa-beat"></i>
             <span>Contact</span></a></li>
-            <li><a href="" class="nav-link scrollto"><i class="fa-solid fa-vial-virus fa-beat"></i> <span>Lab</span></a></li>
+            <li><a href="lab/lab.html" class="nav-link scrollto"><i class="fa-solid fa-vial-virus fa-beat"></i> <span>Lab</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
