--- a/lab/api.html
+++ b/lab/api.html
@@ -74,6 +74,31 @@
   <main id="main">
 
   
+    <section>
+      <div class="container">
+        <
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="card-header">
+                <div class="section-title">
+                  <h2>Random image</h2>
+                </div>
+                <div class="card-body">
+                  <div class="d-flex justify-content-center">
+                  <div class="img-fluid">
+                    <img id="image" src="" alt="random image" class="rounded-3" width="300"  height="300">
+                  </div>
+                  </div>
+                  <div class="d-flex justify-content-center mt-3">
+<button onclick="randomImg()" class="btn btn-primary">Random Image</button>
+                  </div> 
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -119,8 +144,11 @@
   <script src="../assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
+  <script src="../assets/js/lab.js"></script>
   <script src="../assets/js/main.js"></script>
-
+    <script>
+      randomImg();
+    </script>
 </body>
 
 </html>
