--- a/lab/api.html
+++ b/lab/api.html
@@ -43,7 +43,8 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="../index.html" class="nav-link scrollto "><i class="fa-solid fa-circle-chevron-left fa-beat"></i> <span>Back</span></a>
+        <li><a href="../index.html" class="nav-link scrollto "><i class="fa-solid fa-circle-chevron-left fa-beat"></i>
+            <span>Back</span></a>
         </li>
         <!-- <li><a href="#about" class="nav-link scrollto"><i class="fas fa-user fa-beat"></i> <span>About</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="fas fa-file fa-beat"></i> <span>Resume</span></a></li>
@@ -53,8 +54,10 @@
             <span>Services</span></a></li> -->
         <!-- <li><a href="#contact" class="nav-link scrollto"><i class="fas fa-envelope fa-beat"></i>
             <span>Contact</span></a></li> -->
-            <li><a href="java.html" class="nav-link scrollto"><i class="fa-brands fa-js fa-beat"></i> <span>JavaScript</span></a></li>
-            <li><a href="api.html" class="nav-link scrollto active"><i class="fa-solid fa-code fa-beat"></i> <span>API</span></a></li>
+        <li><a href="java.html" class="nav-link scrollto"><i class="fa-brands fa-js fa-beat"></i>
+            <span>JavaScript</span></a></li>
+        <li><a href="api.html" class="nav-link scrollto active"><i class="fa-solid fa-code fa-beat"></i>
+            <span>API</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -67,17 +70,17 @@
         <p>
         <h1><strong class="typeds text-muted" data-typed-items="API"></strong></h1>
         </p>
-      </div>    
+      </div>
     </div>
   </section><!-- End Hero -->
 
   <main id="main">
 
-  
+
     <section>
       <div class="container">
-        <
-          <div class="col-lg-6">
+        <div class="row">
+          <div class="col-lg-6 mb-3">
             <div class="card">
               <div class="card-header">
                 <div class="section-title">
@@ -85,17 +88,76 @@
                 </div>
                 <div class="card-body">
                   <div class="d-flex justify-content-center">
-                  <div class="img-fluid">
-                    <img id="image" src="" alt="random image" class="rounded-3" width="300"  height="300">
-                  </div>
+                    <div class="img-fluid">
+                      <img id="image" src="" alt="random image" class="rounded-3" width="300" height="300">
+                    </div>
                   </div>
                   <div class="d-flex justify-content-center mt-3">
-<button onclick="randomImg()" class="btn btn-primary">Random Image</button>
-                  </div> 
+                    <button onclick="randomImg()" class="btn btn-primary">Random Image</button>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+
+          <div class="col-lg-6 mb-3">
+            <div class="card">
+              <div class="card-header">
+                <div class="section-title">
+                  <h2>Form </h2>
+                </div>
+                <div class="card-body">
+                  <form method="POST"
+                    action="https://script.google.com/macros/s/AKfycbx0iApFyoIC2QHQ7gZ0Mi9d-4orlv_R3wXhnBvf00D28XpWvTfZIdhpqQvjU1M0to7xbA/exec">
+                    <div class="row">
+                      <div class="col-lg-6">
+                        <div class="form-group">
+                          <label for="name">Name</label>
+                          <input type="text" class="form-control" id="name" name="Name" placeholder="Enter name"
+                            required>
+                        </div>
+                      </div>
+
+                      <div class="col-lg-6">
+                        <div class="form-group">
+                          <label for="email">Email</label>
+                          <input type="email" class="form-control" id="email" name="Email" placeholder="Enter email"
+                            required>
+                        </div>
+                      </div>
+                      <div class="mt-3 mb-3">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </div>
+                      <div class="col-lg-12">
+                        <iframe width="100%"
+                          src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTzeeEA1QcwWznsVQ6tCP1ZKvsVrqmtuw7VhqMpgs7EQOw2mWMAXp8d5zIHB1QUm4GlmDNgcIv7NDmM/pubhtml?widget=true&amp;headers=false"></iframe>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6 mb-3">
+            <div class="card">
+              <div class="card-header">
+                <div class="section-title">
+                  <h2>USDT</h2>
+                </div>
+                <div class="card-body">
+                  <p id="updatetime" class="text-center"></p>
+                  <div class="d-flex justify-content-center">
+                    <div id="usdt"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
@@ -142,13 +204,17 @@
   <script src="../assets/vendor/typed.js/typed.umd.js"></script>
   <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="../assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <!-- Template Main JS File -->
   <script src="../assets/js/lab.js"></script>
   <script src="../assets/js/main.js"></script>
-    <script>
-      randomImg();
-    </script>
+  <script>
+    randomImg();
+    fetchPrices();
+    setInterval(fetchPrices, 3000);
+
+  </script>
 </body>
 
 </html>
