--- a/lab/api.html
+++ b/lab/api.html
@@ -158,7 +158,44 @@
             </div>
           </div>
 
+          <div class="col-lg-6 mb-3">
+            <div class="card">
+              <div class="card-header">
+                <div class="section-title">
+                  <h2>nationality</h2>
+                </div>
+                <div class="card-body">
+                  <p id="names" class="text-center"></p>
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <label for="name">Name</label>
+                      <input type="text" class="form-control" id="namess" name="namess" placeholder="Enter name"
+                    </div>
+                    <div class="mt-3">
+                      <button onclick="nationality()" class="btn btn-primary">Search</button>
+                    </div>
+                  </div>
+                  <div class="mt-3">
+                    <div class="table-responsive">
+                      <table class="table table-bordered table-hover">
+                        <thead>
+                          <tr>  
+                            <th>Country</th>
+                            <th>probability</th>
+                          </tr>
+                        </thead>
+
+                        <tbody id="nationality"></tbody>
+                        </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+
+        
       </div>
     </section>
   </main><!-- End #main -->
