--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <a href="" target="_blank">
+                <a href="https://wasuphonthongsopon.github.io/MyResume" target="_blank">
                 <img src="assets/img/testimonials/Wasuphon-Thongsopon.jpg" class="testimonial-img" alt="">
               </a>
                 <h3>Wasuphon Thongsopon</h3>
