--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             class="fa-brands fa-instagram fa-beat"></i></a>
         <a href="https://github.com/Piya-Boy/Piya-Boy" target="_blank" class="github"><i
             class="fa-brands fa-github fa-beat"></i></a>
-        <a href="#" class="linkedin"><i class="fa-brands fa-linkedin fa-beat"></i></a>
+        <a href="www.linkedin.com/in/piya-miang-lae-6167392a5" class="linkedin"><i class="fa-brands fa-linkedin fa-beat"></i></a>
       </div>
 
 
@@ -407,7 +407,7 @@
             <div class="resume-item">
               <h4>High Vocational Certificate Digital Business Technology (Studying).</h4>
               <h5>2023 - Present</h5>
-              <p><em>Pattaya Redemptorist Technological Colleg</em></p>
+              <p><em>The Pattaya Redemptorist Technological College for People with Disabilities</em></p>
               <p>
 
               </p>
@@ -416,7 +416,7 @@
             <div class="resume-item">
               <h4>Vocational Certificate information technology.</h4>
               <h5>2020 - 2022</h5>
-              <p><em>Pattaya Redemptorist Technological Colleg</em></p>
+              <p><em>The Pattaya Redemptorist Technological College for People with Disabilities</em></p>
               <p>
 
               </p>
@@ -883,7 +883,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <a href="https://wasuphonthongsopon.github.io/MyResume" target="_blank">
+                <a href="https://wasuphonthongsopon.github.io/" target="_blank">
                 <img src="assets/img/testimonials/Wasuphon-Thongsopon.jpg" class="testimonial-img" alt="">
               </a>
                 <h3>Wasuphon Thongsopon</h3>
@@ -1003,7 +1003,7 @@
               class="fa-brands fa-instagram fa-beat"></i></a>
           <a href="https://github.com/Piya-Boy/Piya-Boy" target="_blank" class="github"><i
               class="fa-brands fa-github fa-beat"></i></a>
-          <a href="#" class="linkedin"><i class="fa-brands fa-linkedin fa-beat"></i></a>
+          <a href="www.linkedin.com/in/piya-miang-lae-6167392a5" class="linkedin"><i class="fa-brands fa-linkedin fa-beat"></i></a>
         </div>
       </div>
       <div class="copyright">
