--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             class="fa-brands fa-instagram fa-beat"></i></a>
         <a href="https://github.com/Piya-Boy/Piya-Boy" target="_blank" class="github"><i
             class="fa-brands fa-github fa-beat"></i></a>
-        <a href="www.linkedin.com/in/piya-miang-lae-6167392a5" class="linkedin"><i class="fa-brands fa-linkedin fa-beat"></i></a>
+        <a href="https://www.linkedin.com/in/piya-miang-lae-6167392a5/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin fa-beat"></i></a>
       </div>
 
 
@@ -1003,7 +1003,7 @@
               class="fa-brands fa-instagram fa-beat"></i></a>
           <a href="https://github.com/Piya-Boy/Piya-Boy" target="_blank" class="github"><i
               class="fa-brands fa-github fa-beat"></i></a>
-          <a href="www.linkedin.com/in/piya-miang-lae-6167392a5" class="linkedin"><i class="fa-brands fa-linkedin fa-beat"></i></a>
+          <a href="https://www.linkedin.com/in/piya-miang-lae-6167392a5/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin fa-beat"></i></a>
         </div>
       </div>
       <div class="copyright">
