--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <span>Services</span></a></li> -->
         <li><a href="#contact" class="nav-link scrollto"><i class="fas fa-envelope fa-beat"></i>
             <span>Contact</span></a></li>
-            <li><a href="lab/lab.html" class="nav-link scrollto"><i class="fa-solid fa-vial-virus fa-beat"></i> <span>Lab</span></a></li>
+            <!-- <li><a href="lab/lab.html" class="nav-link scrollto"><i class="fa-solid fa-vial-virus fa-beat"></i> <span>Lab</span></a></li> -->
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -94,10 +94,10 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi, Mr.Piya Miang-Lae! I'm a Full Stack Web Developer with specialized skills in both back-end and
-            front-end development. My expertise lies in backend technologies such as CodeIgniter, PHP, and MySQL. On the
-            front-end, I am proficient in JavaScript, jQuery, CSS/SCSS, as well as Bootstrap and Tailwind for creating
-            dynamic and engaging user interfaces.</p>
+          <p>Hi, Mr.Piya Miang-Lae! I'm a full-stack web developer with specialized skills in both back-end and
+ front-end development. My expertise lies in backend technologies such as CodeIgniter, PHP, and MySQL. On the
+  front-end, I am proficient in JavaScript, jQuery, CSS/SCSS, as well as Bootstrap and Tailwind for creating
+ dynamic and engaging user interfaces.</p>
         </div>
 
         <div class="row">
@@ -107,7 +107,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Full Stack Developer &amp; Web Developer.</h3>
             <p class="fst-italic">
-              I'm a Full Stack Web Developer with specialized skills in both back-end and front-end development.
+              I'm a full-stack web developer with specialized skills in both back-end and front-end development.
             </p>
             <div class="row">
               <div class="card bg-dark rounded-3">
@@ -856,7 +856,7 @@
     <!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-<section id="testimonials" class="testimonials section-bg">
+<!-- <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -914,9 +914,8 @@
           </div>
           <div class="swiper-pagination"></div>
         </div>
-
       </div>
-    </section> 
+    </section>  -->
 
     <!-- End Testimonials Section -->
 
@@ -993,7 +992,7 @@
     <div class="container">
       <h3>Mr.Piya Miang-Lae</h3>
       <p>
-        I'm a Full Stack Web Developer with specialized skills in both back-end and front-end development.
+        I'm a full-stack web developer with specialized skills in both back-end and front-end development.
       </p>
       <div class="social-links">
         <div class="social-links">
