--- a/index.html
+++ b/index.html
@@ -955,7 +955,8 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="https://api.web3forms.com/submit" method="POST" role="form" class="php-email-form">
+              <input type="hidden" name="access_key" value="1c4c7783-5067-48a4-9234-a6b037e2a66c">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
