--- a/index.html
+++ b/index.html
@@ -528,11 +528,11 @@
             <div class="portfolio-wrap rounded-3">
               <img src="assets/img/portfolio/c1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>ทักษะการเขียนโปรแกรมคอมพิวเตอร์ ระดับ ปวช. การแข่งขันทักษะวิชาชีพ </h4>
+                <h4>ทักษะการเขียนโปรแกรมคอมพิวเตอร์ ระดับ ปวช. การแข่งขันทักษะวิชาชีพ ปี 2565</h4>
                 <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/c1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="ทักษะการเขียนโปรแกรมคอมพิวเตอร์ ระดับ ปวช. การแข่งขันทักษะวิชาชีพ"><i
+                    title="ทักษะการเขียนโปรแกรมคอมพิวเตอร์ ระดับ ปวช. การแข่งขันทักษะวิชาชีพ ปี 2565"><i
                       class="fa fa-plus"></i></a>
 
                 </div>
@@ -643,8 +643,22 @@
                 </div>
               </div>
             </div>
+          </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
+            <div class="portfolio-wrap rounded-3">
+              <img src="assets/img/portfolio/c1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>ทักษะการเขียนโปรแกรมคอมพิวเตอร์ ระดับ ปวส. การแข่งขันทักษะวิชาชีพ ปี 2567</h4>
+                <p></p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/c8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="ทักษะการเขียนโปรแกรมคอมพิวเตอร์ ระดับ ปวส. การแข่งขันทักษะวิชาชีพ ปี 2567"><i
+                      class="fa fa-plus"></i></a>
 
+                </div>
+              </div>
+            </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-gallery">
