--- a/index.html
+++ b/index.html
@@ -238,11 +238,34 @@
               </div>
             </div>
 
+                        <div class="progress">
+              <span class="skill">Flutter <i class="val">10%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
 
             <div class="progress">
-              <span class="skill">Tailwind <i class="val">55%</i></span>
+              <span class="skill">Tailwind <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+                        <div class="progress">
+              <span class="skill">ReactJs <i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+                        <div class="progress">
+              <span class="skill">NextJs <i class="val">35%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -293,6 +316,22 @@
               </div>
             </div>
 
+              <div class="progress">
+              <span class="skill">MongoDB <i class="val">35%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+                        <div class="progress">
+              <span class="skill">NodeJS <i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
             <div class="progress">
               <span class="skill">VBA <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
@@ -313,6 +352,14 @@
               <span class="skill">CodeIgniter <i class="val">98%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+              <div class="progress">
+              <span class="skill">Prisma <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -350,6 +397,14 @@
 
             <div class="progress">
               <span class="skill">Power Bi <i class="val">40%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+                        <div class="progress">
+              <span class="skill">Power Platform <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                 </div>
