--- a/index.html
+++ b/index.html
@@ -1084,7 +1084,11 @@
     </div>
   </footer><!-- End Footer -->
 
-  <div id="preloader"></div>
+  <div id="preloader">
+    <div class="load d-flex align-items-center justify-content-center">
+       <dotlottie-player src="https://lottie.host/e774e2d2-a124-4bf7-9417-40c68a3cb1ef/CzsNstJ0am.json" background="transparent" speed="1" style="width: 800px; height: 800px;" loop autoplay></dotlottie-player>
+    </div>
+  </div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="fa-sharp fa-solid fa-chevron-up fa-beat"></i></a>
 
@@ -1098,6 +1102,7 @@
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+<script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
