--- a/index.html
+++ b/index.html
@@ -1009,13 +1009,13 @@
               <div class="email">
                 <i class="fas fa-envelope fa-beat"></i>
                 <h4>Email:</h4>
-                <p>piyaboy0974@gmail</p>
+                <p>piyaboy0974@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="fas fa-phone fa-beat"></i>
                 <h4>Call:</h4>
-                <p>+66 97 959 81177</p>
+                <p>+66 97 959 81177.</p>
               </div>
 
             </div>
