--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
               <div class="email">
                 <i class="fas fa-envelope fa-beat"></i>
                 <h4>Email:</h4>
-                <p>piyaboy0974@gmail.com</p>
+                <p>piya.mianglae@gmail.com</p>
               </div>
 
               <div class="phone">
