--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   front-end, I am proficient in JavaScript, jQuery, CSS/SCSS, as well as Bootstrap and Tailwind for creating
  dynamic and engaging user interfaces.</p>
         </div>
-
+ 
         <div class="row">
           <div class="col-lg-4">
             <img src="assets/img/profile-img.jpg" class="img-fluid rounded-circle" alt="">
@@ -153,14 +153,14 @@
 
                       <ul class="mt-3">
                         <li><i class="bi bi-chevron-right fa-beat"></i> <strong>Age:</strong>
-                          <span>24</span>
+                          <span id="age"></span>
                         </li>
                         <li><i class="bi bi-chevron-right"></i> <strong>Disability:</strong>
                           <span>Movement
                             disabilities.</span>
                         </li>
-                        <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong>
-                          <span>piyaboy097@gmail.com</span>
+                        <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
+                          <span>piyamianglae.b@gmail.com</span>
                         </li>
                         <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong>
                           <span>Available</span>
@@ -186,262 +186,37 @@
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Skills</h2>
-          <p>My skills include the following:</p>
-        </div>
-
-        <div class="row skills-content">
-          <div class="col-lg-6">
-            <div class="section-title text-center mt-3">
-              <h2>Frontend</h2>
-            </div>
-            <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">SCSS <i class="val">60%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Bootstrap <i class="val">95%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-                        <div class="progress">
-              <span class="skill">Flutter <i class="val">10%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Tailwind <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-                        <div class="progress">
-              <span class="skill">ReactJs <i class="val">60%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-                        <div class="progress">
-              <span class="skill">NextJs <i class="val">35%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">jQuery <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
+  
+          <div class="section-title">
+              <h2>Skills</h2>
+              <p>My skills include the following:</p>
           </div>
-
-          <div class="col-lg-6">
-            <div class="section-title text-center mt-3">
-              <h2>Backend</h2>
-            </div>
-            <div class="progress">
-              <span class="skill">PHP <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                </div>
+  
+          <div class="row skills-content">
+              <div class="col-lg-6">
+                  <div class="section-title text-center mt-3">
+                      <h2>Frontend</h2>
+                  </div>
+                  <div id="frontend-skills"></div>
               </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">PYTHON <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                </div>
+  
+              <div class="col-lg-6">
+                  <div class="section-title text-center mt-3">
+                      <h2>Backend</h2>
+                  </div>
+                  <div id="backend-skills"></div>
               </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">C <i class="val">40%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
-                </div>
+  
+              <div class="col-lg-8 m-auto">
+                  <div class="section-title text-center mt-3">
+                      <h2>Others</h2>
+                  </div>
+                  <div id="other-skills"></div>
               </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">MYSQL <i class="val">97%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-              <div class="progress">
-              <span class="skill">MongoDB <i class="val">35%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-                        <div class="progress">
-              <span class="skill">NodeJS <i class="val">60%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">VBA <i class="val">50%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Dart <i class="val">30%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CodeIgniter <i class="val">98%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-              <div class="progress">
-              <span class="skill">Prisma <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
           </div>
-
-          <div class="col-lg-8 m-auto">
-            <div class="section-title text-center mt-3">
-              <h2>Others</h2>
-            </div>
-
-            <div class="progress">
-              <span class="skill">GIT <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">GITHUB <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Microsoft Office <i class="val">98%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Power Bi <i class="val">40%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-                        <div class="progress">
-              <span class="skill">Power Platform <i class="val">40%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Cyber Security <i class="val">40%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Photoshop <i class="val">30%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Figma <i class="val">50%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
       </div>
-
-      </div>
-    </section><!-- End Skills Section -->
+  </section>
+    <!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
@@ -1088,6 +863,7 @@
       class="fa-sharp fa-solid fa-chevron-up fa-beat"></i></a>
 
   <!-- Vendor JS Files -->
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
