--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <body>
 
   <!-- ======= Mobile nav toggle button ======= -->
-  <button type="button" class="mobile-nav-toggle d-xl-none"><i
-      class="bi bi-list mobile-nav-toggle fa-beat"></i></button>
-  <!-- <i class="bi bi-list mobile-nav-toggle d-lg-none fa-beat"></i> -->
+  <button type="button" class="mobile-nav-toggle d-xl-none">
+    <i class="bi bi-list"></i>
+  </button>
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex flex-column justify-content-center">
 
